--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <!-- Overlay content -->
          <div class="overlay-content">
             <a id="nav-link" href="#features">Features</a>
-            <a id="nav-link" href="#">Blog</a>
+            <a id="nav-link" href="#blog">Blog</a>
             <a id="nav-link" href="#">Portfolio</a>
             <a id="nav-link" href="#">About</a>
             <a id="nav-link" href="#">Contact</a>
@@ -87,7 +87,12 @@
    </section>
 
    <!--Blog Section-->
-   <section id="blog">
+   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#37D3E7" fill-opacity="1"
+         d="M0,96L120,112C240,128,480,160,720,186.7C960,213,1200,235,1320,245.3L1440,256L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
+      </path>
+   </svg>
+   <section id="blog">      
       <div class="title">
          <h1>Why you need a website?</h1>
       </div>
