Developed to about us page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
    <link rel="stylesheet" href="styles.css">
    <link rel="stylesheet" href="features.css">
    <link rel="stylesheet" href="blog.css">
+   <link rel="stylesheet" href="portfolio.css">
+   <link rel="stylesheet" href="about.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto&display=swap" rel="stylesheet">
@@ -29,7 +31,7 @@
          <div class="overlay-content">
             <a id="nav-link" href="#features">Features</a>
             <a id="nav-link" href="#blog">Blog</a>
-            <a id="nav-link" href="#">Portfolio</a>
+            <a id="nav-link" href="#port">Portfolio</a>
             <a id="nav-link" href="#">About</a>
             <a id="nav-link" href="#">Contact</a>
          </div>
@@ -127,6 +129,32 @@
          <button id="blog-btn"><a href="">Read More</a></button>
       </div>
       
+   </section>
+
+   <section id="port">
+      <h2 class="sub-heading">Portfolio</h2>
+      <div class="port-master-grid">
+         <div class="port-card" id="first">
+            <img id="port-img" src="testi 01.jpg" alt="Fitness trainer with kettlebell facing backwards. (Image source: 'Unsplash.com'">
+         </div>
+
+         <div class="port-sub-grid">
+            <div class="port-card" id="sec">
+               <img id="port-img" src="testi 02.jpg"
+                  alt="A photo frame hanging in empty white wall. (Image source: 'Unsplash.com'">
+            </div>            
+            <div class="port-card" id="sec">
+               <img id="port-img" src="testi 03.jpg"
+                  alt="Female fashion influencer wearing fancy sunglasses. (Image source: 'Unsplash.com'">
+            </div>
+         </div>      
+      </div>
+   </section>
+
+   <section id="about">
+      <h2 class="sub-heading" id="about-title">About Us</h2>
+      <p class="about-para">We are a new founded boutique web design firm. We primarily focus on bringing out measurable results for your business
+      with the power of websites</p>
    </section>
 
    <script src="app.js"></script>
